--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-# Nestjs specific
+# Nestjs# compiled output
 /dist
 /node_modules
 /build
-/tmp
 
 # Logs
 logs
@@ -13,12 +12,43 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# dotenv environment variable files
-.env
-.env.development
-.env.test
-.env.production
+# OS
+.DS_Store
 
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Temp files
+*.swp
+*.swo
+*~
+.tmp
+
+
+# dotenv environment variable files
+# .env
+# .env.development
+# .env.test
 # temp directory
 .temp
 .tmp
